bugfix: missed custom scrollbar for preview mode

--- a/styles/filemanager.css
+++ b/styles/filemanager.css
@@ -337,6 +337,7 @@ html[data-useragent*='MSIE 11.0'] .fm-container #newfile {
 
 .fm-container .fm-preview {
     width: 100%;
+    height: 100%;
 }
 
 .fm-container .fm-preview .fm-preview-viewer {
